trunk/Archive2/20/f24a1398814eab/output
main.cpp:22:1: error: 'ipconfig' does not name a type
 ipconfig
 ^
